--- a/css/styleForBeatles.css
+++ b/css/styleForBeatles.css
@@ -81,3 +81,21 @@ a {
 	color: #fa57c1;
 	font-size: 20px;
 }
+
+@media all and (max-width: 1000px) {
+	#container {
+		width: 100%;
+	}
+	h1,h2,h3,h4 {
+		text-align: center;
+	}
+	iframe {
+		max-width: 100%;
+	}
+	img {
+		margin-left: 25%;
+	}
+	#video {
+		height: 500px;
+	}
+}
